# qualifyze-data-pipeline

./: .gitignore  README.md  orchestration.excalidraw  requirements.txt  sites_curation_proposal.md
dagster-pipeline/: pyproject.toml
dagster-pipeline/src/dagster_pipeline/: definitions.py
dagster-pipeline/src/dagster_pipeline/defs/: dbt_assets.py  ingestion.py
qualifyze_dbt/: .gitignore  .user.yml  README.md  dbt_project.yml  load_env_credentials.sh  profiles.yml  run_dbt.sh
qualifyze_dbt/macros/: export_to_s3.sql
qualifyze_dbt/models/1_bronze/: stg_sites.sql  stg_sites.yml  stg_sites_metadata.sql  stg_sites_metadata.yml
qualifyze_dbt/models/2_silver/: sites_enriched.sql  sites_enriched.yml  sites_unions.sql  sites_unions.yml
qualifyze_dbt/models/3_gold/: site_business_insights.sql  site_business_insights.yml
