[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-pipeline"
version = "0.1.0"
description = "Dagster pipeline for Qualifyze challenge"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-aws",
    "dagster-dbt",
    "pandas",
    "boto3",
    "pyarrow",
    "duckdb"
]

[tool.dagster]
module_name = "dagster_pipeline"
attribute = "defs"
